feat(Series Details Page): add season details with episodes to Series Details page (using EntityCard generic component), fix some css classes that were common with other components (voodoos), getting larger episode photos from TMDB API (looks better)

--- a/client/src/components/authenticationContainer/AuthenticationContainer.css
+++ b/client/src/components/authenticationContainer/AuthenticationContainer.css
@@ -1,4 +1,4 @@
-.card {
+.auth-container-card {
     border-radius: 1rem;
     max-width: 400px;
 }
@@ -8,7 +8,7 @@
     padding: 1em;
 }
 
-.card-body {
+.auth-container-card-body {
     padding: 1em 3em 3em 3em;
 }
 
