refactor(Watchlist Icon): move tooltip CSS to index.css for reuse

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.tooltip .tooltip-inner {
+  background-color: #3b71ca;
+}
